@@ -2,8 +2,8 @@ AC_INIT(src/openvrml/OpenVRML/VrmlScene.cpp)
 
 PACKAGE=openvrml
 OPENVRML_MAJOR_VERSION="0"
-OPENVRML_MINOR_VERSION="11"
-OPENVRML_MICRO_VERSION="1"
+OPENVRML_MINOR_VERSION="12"
+OPENVRML_MICRO_VERSION="0"
 VERSION="${OPENVRML_MAJOR_VERSION}.${OPENVRML_MINOR_VERSION}.${OPENVRML_MICRO_VERSION}"
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 AM_CONFIG_HEADER(config.h)
