@@ -1,4 +1,4 @@
-LIBRARY_VERSION = 1:1:0
+LIBRARY_VERSION = 1:2:0
 #                 | | |
 #          +------+ | +---+
 #          |        |     |
