@@ -757,7 +757,6 @@ matrix_to_glmatrix(double M[4][4], float GLM[16])
 
 void VrmlScene::render(Viewer *viewer)
 {
-
   if (d_newView)
     {
       viewer->resetUserNavigation();
